core/app/shell/src/themes/suite8/css/layout/_listview-mobile.scss
/**
 * SuiteCRM is a customer relationship management program developed by SalesAgility Ltd.
 * Copyright (C) 2023 SalesAgility Ltd.
 *
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Affero General Public License version 3 as published by the
 * Free Software Foundation with the addition of the following permission added
 * to Section 15 as permitted in Section 7(a): FOR ANY PART OF THE COVERED WORK
 * IN WHICH THE COPYRIGHT IS OWNED BY SALESAGILITY, SALESAGILITY DISCLAIMS THE
 * WARRANTY OF NON INFRINGEMENT OF THIRD PARTY RIGHTS.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
 * details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * In accordance with Section 7(b) of the GNU Affero General Public License
 * version 3, these Appropriate Legal Notices must retain the display of the
 * "Supercharged by SuiteCRM" logo. If the display of the logos is not reasonably
 * feasible for technical reasons, the Appropriate Legal Notices must display
 * the words "Supercharged by SuiteCRM".
 */

@media all and (max-width: $breakpoint-xxlarge) {
  .list-view-settings {
    .quick-filter-border {
      border: none!important;
      margin-right: 0;
      padding-right: 0;
    }
  }
}

@media all and (min-width: $breakpoint-xxlarge) {
  .list-view-settings {
    .quick-filter-border {
      border-right: 1px solid rgb(108, 117, 125, 0.5)!important;
      margin-right: 0.25rem;
      padding-right: 0.25rem;
    }
  }
}

@media all and (max-width: $breakpoint-xlarge) {
    .list-view {
        .list-widget-container {
            margin-left: 1.1em;
            margin-top: 1em;
        }
    }
}

@media all and (max-width: $breakpoint-large) {
    .list-view {
        .list-view-header {
            .container-fluid {
                .row {
                    margin-left: 0;
                    margin-right: 0;
                }
            }
            .list-view-title {
                margin: 0;
            }
        }
        .list-widget-container {
            margin-top: 1em;
            margin-left: 1.1em;
        }
    }
}

@media all and (max-width: $breakpoint-medium) {
  .line-action-container {
    position: relative;
    display: flex;
    align-items: center;

    .line-action-position {
      position: absolute;
      right: 0;
    }
  }
  .listview-actions {
    position: relative;
    display: flex;
    align-items: center;
    padding: 2px;
    transition: 0.5s;
    border-radius: 10px;
    overflow: hidden;
    &.active {
      background-color: #fff;
      box-shadow: 0 8px 15px rgba(0,0,0,.2);

      .icon-bar {
        display: flex;
        overflow: hidden;
        transition: 0.8s;
        width: 200px;
        margin-left: 0.7em;

        .icon-bar-block {
          display: grid;
          grid-template-columns: repeat(4, minmax(50px, 1fr));

          .line-action-item {
            font-size: 1.2em;

            &:focus {
              outline: none;
              border-radius: 50px;
              background-color: rgba(232, 234, 237, 0.4);
            }
          }
        }
      }
    }

    .icon-bar {
      display: flex;
      width: 0;
      overflow: hidden;
      transition: 0.5s;

      .icon-bar-block {
        display: none;
      }
    }

    .more-button {
      display: inline-block;
      background-color: transparent;
      &:focus {
        outline: none;
      }
    }
  }
}

@media all and (max-width: $breakpoint-small) {
    .list-view {
        .pagination-count {
            display: none;
        }
        .chart-sidebar-widget {
            .login-form {
                right: 0.4em;
                width: 95% !important;
                left: 0.4em;
            }
            .chart-widget {
                margin-top: 3rem !important;
            }
        }
        .list-widget-container {
            margin-left: 1.1em;
        }
        .line-action-item {
            padding: 0 0.8em;
        }
    }
    .list-view-header .row {
      padding-left: 0;
      padding-right: 0;
      margin-left: 0;
      margin-right: 0!important;
    }
    .table-pagination-wrapper {
        flex-basis: auto;
        display: flex;
        padding-left: 1em!important;
    }
}

